<resources>
    <string name="action_settings">Settings</string>
    <string name="server_client_id">使用自己申请的key</string>
    <string name="facebook_app_id">使用自己申请的key</string>
    <string name="fb_login_protocol_scheme">使用自己申请的key</string>
    <string name="account_auth_login">第三方账号登录</string>
    <string name="account_auth_login_failed">auth 登录失败</string>
    <string name="account_cancel">取消</string>
    <string name="account_change_password">修改密码</string>
    <string name="account_choose_find_pwd_style">请选择重置密码的方式</string>
    <string name="account_choose_find_pwd_style_email">邮箱</string>
    <string name="account_choose_find_pwd_style_phone">手机号码</string>
    <string name="account_choose_register_style">请选择注册方式</string>
    <string name="account_choose_register_style_email">手机号码</string>
    <string name="account_choose_register_style_phone">邮箱</string>
    <string name="account_complete">完成</string>
    <string name="account_continue">确认</string>
    <string name="account_country_code">国家地区代码</string>
    <string name="account_email_verify_code">邮箱校验码</string>
    <string name="account_error_time">当前时间设置异常</string>
    <string name="account_find_password">找回密码</string>
    <string name="account_forget_password">忘记密码？</string>
    <string name="account_get_accesstoken_error">获取AccessToken失败</string>
    <string name="account_get_country_error">获取国家/地区码失败</string>
    <string name="account_hot_country">热门国家或地区</string>
    <string name="account_input_new_passwrod">输入新密码</string>
    <string name="account_input_password">输入密码</string>
    <string name="account_login">登录</string>
    <string name="account_login_failed">登录失败</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_logout_failed">登出失败</string>
    <string name="account_logout_success">登出成功</string>
    <string name="account_name_hint">账号</string>
    <string name="account_network_anomaly">网络异常</string>
    <string name="account_next">下一步</string>
    <string name="account_password_hint">密码</string>
    <string name="account_phone">手机号</string>
    <string name="account_phone_number">手机号码</string>
    <string name="account_phone_register">手机号码</string>
    <string name="account_register">免费注册</string>
    <string name="account_register_free">注册账号</string>
    <string name="account_reset_pwd">重置密码</string>
    <string name="account_select_country_code">选择国家/地区代码</string>
    <string name="account_send_email_code">发送邮箱校验码</string>
    <string name="account_send_verify_code">发送验证码</string>
    <string name="account_sms_verify_code">验证码</string>
    <string name="account_ssl_error">当前页面SSL证书可能不被信任，确认打开?</string>
    <string name="account_sure">确定</string>
    <string name="account_user_name">用户名</string>
    <string name="ali_sdk_openaccount_cancel">取消</string>
    <string name="ali_sdk_openaccount_confirm">确定</string>
    <string name="ali_sdk_openaccount_dynamic_icon_eye"></string>
    <string name="ali_sdk_openaccount_dynamic_icon_eye_open"></string>
    <string name="ali_sdk_openaccount_dynamic_loading_progress_message">加载中...</string>
    <string name="ali_sdk_openaccount_dynamic_network_not_available_message">网络无法连接</string>
    <string name="ali_sdk_openaccount_dynamic_system_exception">系统异常</string>
    <string name="ali_sdk_openaccount_dynamic_text_activity_basewebviewactivity_strings_menulist_copy">已复制到剪贴板</string>
    <string name="ali_sdk_openaccount_dynamic_text_alert_msg_after_login">您的菜鸟用户名：%1$s \n登录密码与大宝账号密码相同，请牢记</string>
    <string name="ali_sdk_openaccount_dynamic_text_back_message">返回</string>
    <string name="ali_sdk_openaccount_dynamic_text_close_message">关闭</string>
    <string name="ali_sdk_openaccount_dynamic_text_go_email_register_check">是否现在去邮箱检查邮件</string>
    <string name="ali_sdk_openaccount_dynamic_text_go_email_register_check_no">否</string>
    <string name="ali_sdk_openaccount_dynamic_text_go_email_register_check_yes">是</string>
    <string name="ali_sdk_openaccount_dynamic_text_iknow">我知道了</string>
    <string name="ali_sdk_openaccount_dynamic_text_jaq_default_verify_error">验证出错</string>
    <string name="ali_sdk_openaccount_dynamic_text_jaq_nocapcha_verify_error">滑动验证出错</string>
    <string name="ali_sdk_openaccount_dynamic_text_jaq_sms_verify_error">短信验证出错</string>
    <string name="ali_sdk_openaccount_dynamic_text_mobile">手机号码</string>
    <string name="ali_sdk_openaccount_dynamic_text_mobile_or_login_id">手机号码/昵称</string>
    <string name="ali_sdk_openaccount_dynamic_text_network_exception">网络不稳定，请稍后再试</string>
    <string name="ali_sdk_openaccount_dynamic_text_qr_confirm_title_bar">扫码登录</string>
    <string name="ali_sdk_openaccount_dynamic_text_system_exception">系统繁忙，请稍后再试.</string>
    <string name="ali_sdk_openaccount_email_code_success_hint">验证码已发送至你的邮箱，可能会有延后请耐心等待</string>
    <string name="ali_sdk_openaccount_ssl_error_info">证书错误. 是否继续访问?</string>
    <string name="ali_sdk_openaccount_ssl_error_title">SSL证书错误</string>
    <string name="ali_sdk_openaccount_text_account_device">设备管理</string>
    <string name="ali_sdk_openaccount_text_account_nonexist">账户不存在</string>
    <string name="ali_sdk_openaccount_text_account_security_info">开启后，在新设备登录会要求验证用户身份</string>
    <string name="ali_sdk_openaccount_text_account_security_title">登录保护</string>
    <string name="ali_sdk_openaccount_text_agree">同意</string>
    <string name="ali_sdk_openaccount_text_alipay">支付宝</string>
    <string name="ali_sdk_openaccount_text_already_register">手机号 %s 已经注册</string>
    <string name="ali_sdk_openaccount_text_change_mobile">绑定手机号</string>
    <string name="ali_sdk_openaccount_text_check_code">验证码</string>
    <string name="ali_sdk_openaccount_text_checkcode">验证码</string>
    <string name="ali_sdk_openaccount_text_checkmail">检查邮件</string>
    <string name="ali_sdk_openaccount_text_confirm">确定</string>
    <string name="ali_sdk_openaccount_text_confirm_login">立即登录</string>
    <string name="ali_sdk_openaccount_text_confirm_pwd">确认密码</string>
    <string name="ali_sdk_openaccount_text_confirm_register">同意协议并注册</string>
    <string name="ali_sdk_openaccount_text_count_down">重新发送（%ss）</string>
    <string name="ali_sdk_openaccount_text_delete">删除</string>
    <string name="ali_sdk_openaccount_text_device_current">本机</string>
    <string name="ali_sdk_openaccount_text_device_logintime">登录时间</string>
    <string name="ali_sdk_openaccount_text_device_name">设备名</string>
    <string name="ali_sdk_openaccount_text_device_not_del_current">你不能删除本机设备</string>
    <string name="ali_sdk_openaccount_text_email_register">邮箱</string>
    <string name="ali_sdk_openaccount_text_email_reset_password">邮箱重置密码</string>
    <string name="ali_sdk_openaccount_text_enter_check_code">输入短信验证码</string>
    <string name="ali_sdk_openaccount_text_enter_mobile">输入手机号</string>
    <string name="ali_sdk_openaccount_text_exit">退出</string>
    <string name="ali_sdk_openaccount_text_exit_register">不注册,退出</string>
    <string name="ali_sdk_openaccount_text_find_password">找回密码</string>
    <string name="ali_sdk_openaccount_text_forget_password">忘记密码?</string>
    <string name="ali_sdk_openaccount_text_free_register">注册账户</string>
    <string name="ali_sdk_openaccount_text_login">登录</string>
    <string name="ali_sdk_openaccount_text_loginId">手机号码/邮箱</string>
    <string name="ali_sdk_openaccount_text_login_password">登录密码</string>
    <string name="ali_sdk_openaccount_text_mail">邮箱</string>
    <string name="ali_sdk_openaccount_text_mobile_country_code_subfix">+</string>
    <string name="ali_sdk_openaccount_text_mobile_country_default_code">86</string>
    <string name="ali_sdk_openaccount_text_mobile_country_search_hint">搜索</string>
    <string name="ali_sdk_openaccount_text_mobile_country_title">选择国家和地区代码</string>
    <string name="ali_sdk_openaccount_text_new_password">新密码</string>
    <string name="ali_sdk_openaccount_text_new_pwd">新密码(6位及以上数字、字母组合)</string>
    <string name="ali_sdk_openaccount_text_next_step">下一步</string>
    <string name="ali_sdk_openaccount_text_no_password_login">无密登录</string>
    <string name="ali_sdk_openaccount_text_not_register">手机号 %s 还没注册</string>
    <string name="ali_sdk_openaccount_text_other_plateform_login">其他账号登录</string>
    <string name="ali_sdk_openaccount_text_password">密码</string>
    <string name="ali_sdk_openaccount_text_protocol">《关于注册菜鸟智能柜的协议》</string>
    <string name="ali_sdk_openaccount_text_qq">QQ</string>
    <string name="ali_sdk_openaccount_text_qr_login_title_bar">Open Account 账号登录</string>
    <string name="ali_sdk_openaccount_text_register">注册</string>
    <string name="ali_sdk_openaccount_text_register_confirm">注册</string>
    <string name="ali_sdk_openaccount_text_register_hot_regions">热门</string>
    <string name="ali_sdk_openaccount_text_register_password_rule">密码由6–20位英文、数字、或符号组成</string>
    <string name="ali_sdk_openaccount_text_reset_password">重置密码</string>
    <string name="ali_sdk_openaccount_text_reset_password_rule">1、为了您的账号安全，新旧密码必须不同\n2、6–20位字符(字母 数字 符号)，不能只使用一种字符，区别大小写</string>
    <string name="ali_sdk_openaccount_text_send_sms_code">获取验证码</string>
    <string name="ali_sdk_openaccount_text_sendmail">获取验证码</string>
    <string name="ali_sdk_openaccount_text_set_account_info">设置账户信息</string>
    <string name="ali_sdk_openaccount_text_set_password">设置密码</string>
    <string name="ali_sdk_openaccount_text_set_pwd">设置密码(6位及以上数字、字母组合)</string>
    <string name="ali_sdk_openaccount_text_sms_code">短信校验码</string>
    <string name="ali_sdk_openaccount_text_sms_login">短信验证码登录</string>
    <string name="ali_sdk_openaccount_text_sms_register">短信注册</string>
    <string name="ali_sdk_openaccount_text_taobao">淘宝</string>
    <string name="ali_sdk_openaccount_text_username">手机号码/邮箱</string>
    <string name="ali_sdk_openaccount_text_weibo">微博</string>
    <string name="ali_sdk_openaccount_text_weixin">微信</string>
    <string name="ali_sdk_openaccount_text_whether_to_login">是否用该手机号登录?</string>
    <string name="ali_sdk_openaccount_text_whether_to_register">是否用该手机号注册?</string>
    <string name="alisdk_openaccount_message_10000_action">请检查对应名称模块的库文件是否包含在当前开发应用的依赖库里面</string>
    <string name="alisdk_openaccount_message_10000_message">JS Bridge 载入器未找到名称为 {0} 的模块</string>
    <string name="alisdk_openaccount_message_10000_name">JS_BRIDGE_MODULE_NOT_FOUND</string>
    <string name="alisdk_openaccount_message_10000_type">E</string>
    <string name="alisdk_openaccount_message_10002_action">@string/alisdk_openaccount_message_default_action</string>
    <string name="alisdk_openaccount_message_10002_message">SDK 初始化出错，错误信息为 {0}</string>
    <string name="alisdk_openaccount_message_10002_name">SDK_INIT_EXCEPTION</string>
    <string name="alisdk_openaccount_message_10002_type">E</string>
    <string name="alisdk_openaccount_message_10003_action"/>
    <string name="alisdk_openaccount_message_10003_message">当前操作已经取消</string>
    <string name="alisdk_openaccount_message_10003_name">USER_CANCEL</string>
    <string name="alisdk_openaccount_message_10003_type">I</string>
    <string name="alisdk_openaccount_message_10004_action"/>
    <string name="alisdk_openaccount_message_10004_message">token免登失败</string>
    <string name="alisdk_openaccount_message_10004_name">USER_TOKEN_LOGIN_FAIL</string>
    <string name="alisdk_openaccount_message_10004_type">I</string>
    <string name="alisdk_openaccount_message_10010_action">@string/alisdk_openaccount_message_default_action</string>
    <string name="alisdk_openaccount_message_10010_message">发生错误，消息为 {0}, 请使用 LogCat 查看更多细节</string>
    <string name="alisdk_openaccount_message_10010_name">GENERIC_SYSTEM_ERROR</string>
    <string name="alisdk_openaccount_message_10010_type">E</string>
    <string name="alisdk_openaccount_message_10011_action">请在当前应用登录后再执行当前操作</string>
    <string name="alisdk_openaccount_message_10011_message">当前应用未登录</string>
    <string name="alisdk_openaccount_message_10011_name">USER_NOT_LOGIN</string>
    <string name="alisdk_openaccount_message_10011_type">W</string>
</resources>