<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:inputBox="http://schemas.android.com/apk/res-auto"
    xmlns:inputHistory="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ali_sdk_openaccount_bg_corners_white"
            android:orientation="vertical">

            <com.alibaba.sdk.android.openaccount.ui.widget.InputBoxWithHistory
                android:id="@+id/login_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:gravity="center_vertical"
                inputBox:ali_sdk_openaccount_attrs_hint="@string/ali_sdk_openaccount_text_username"
                inputHistory:ali_sdk_openaccount_attrs_storeKey="openaccount_loginid_history" />

            <ListView
                android:id="@+id/input_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ali_sdk_openaccount_bg_topline_gray"
                android:divider="@android:color/transparent"
                android:fillViewport="true"
                android:overScrollMode="never"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:paddingRight="1dp"
                android:visibility="gone" />

            <com.alibaba.sdk.android.openaccount.ui.widget.PasswordInputBox
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ali_sdk_openaccount_bg_topline_gray"
                android:gravity="center_vertical"
                inputBox:ali_sdk_openaccount_attrs_hint="@string/ali_sdk_openaccount_text_password"
                inputBox:ali_sdk_openaccount_attrs_inputType="textPassword" />


        </LinearLayout>
        <com.aliyun.iot.aep.sdk.page.view.NextStepButton
            android:layout_width="match_parent"
            android:text="@string/ali_sdk_openaccount_text_login"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/ali_sdk_openaccount_text_free_register"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="end"
                android:text="@string/ali_sdk_openaccount_text_forget_password"
                android:textSize="16sp" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rb_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_agree"
                android:textColor="@color/color_333333"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:text="@string/login_policy"
                android:textColor="@color/color_theme"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>